--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.4",
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.3",
+    "less-loader": "^6.1.0",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -24,7 +26,11 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "html-loader": "^0.5.4",
+    "less": "^4.1.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^7.3.1"
   },
   "eslintConfig": {
     "root": true,
