--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.3",
     "less-loader": "^6.1.0",
+    "md-editor-v3": "^1.9.2",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.0",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -27,10 +30,15 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "github-markdown-css": "^5.1.0",
+    "highlight.js": "^11.4.0",
     "html-loader": "^0.5.4",
     "less": "^4.1.2",
     "node-sass": "^6.0.1",
-    "sass-loader": "^7.3.1"
+    "sass-loader": "^7.3.1",
+    "vue-loader": "^15.9.8",
+    "vue-markdown-loader": "^2.5.0",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
