--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myblog",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.4",
+    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^0.2.6",
     "axios": "^0.24.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.20.3",
     "element-plus": "^1.2.0-beta.3",
-    "less-loader": "^6.1.0",
+    "less-loader": "^6.2.0",
     "md-editor-v3": "^1.9.2",
-    "unplugin-vue-components": "^0.17.2",
-    "vue": "^3.0.0",
+    "unplugin-vue-components": "^0.17.14",
+    "valine": "^1.4.16",
+    "vue": "^3.2.29",
     "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -26,13 +28,13 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.29",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.4.0",
-    "html-loader": "^0.5.4",
+    "html-loader": "^0.5.5",
     "less": "^4.1.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^7.3.1",
