--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "element-plus": "^1.2.0-beta.3",
     "less-loader": "^6.2.0",
     "md-editor-v3": "^1.9.2",
-    "unplugin-vue-components": "^0.17.14",
     "valine": "^1.4.16",
     "vue": "^3.2.29",
     "vue-markdown": "^2.2.4",
@@ -38,6 +37,8 @@
     "less": "^4.1.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^7.3.1",
+    "unplugin-auto-import": "^0.5.11",
+    "unplugin-vue-components": "^0.17.15",
     "vue-loader": "^15.9.8",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.6.14"
