--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": "off" 
+    }
   },
   "browserslist": [
     "> 1%",
